--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,39 @@
-# database init, supports mysql too
-database=h2
+# Common Configuration
+spring.thymeleaf.mode=HTML
+spring.jpa.open-in-view=false
+spring.messages.basename=messages/messages
+management.endpoints.web.exposure.include=*
+logging.level.org.springframework=INFO
+spring.web.resources.cache.cachecontrol.max-age=12h
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=none
+
+# Database Initialization
+spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
 spring.sql.init.data-locations=classpath*:db/${database}/data.sql
 
-# Web
-spring.thymeleaf.mode=HTML
+# H2 Database (Default)
+spring.profiles.active=${SPRING_PROFILE:h2}
+database=h2
+spring.datasource.url=jdbc:h2:mem:petclinic
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.open-in-view=false
+# MySQL Configuration
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://mysql:3306/petclinic}
+spring.datasource.username=${MYSQL_USER:petclinic}
+spring.datasource.password=${MYSQL_PASS:petclinic}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Internationalization
-spring.messages.basename=messages/messages
+# PostgreSQL Configuration
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://postgres:5432/petclinic}
+spring.datasource.username=${POSTGRES_USER:petclinic}
+spring.datasource.password=${POSTGRES_PASS:petclinic}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Actuator
-management.endpoints.web.exposure.include=*
-
-# Logging
-logging.level.org.springframework=INFO
-# logging.level.org.springframework.web=DEBUG
-# logging.level.org.springframework.context.annotation=TRACE
-
-# Maximum time static resources should be cached
-spring.web.resources.cache.cachecontrol.max-age=12h
